--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,14 @@ android {
         debug{
             buildConfigField "String", "ApiKey", '"4c921e493eb1ddd194497503171cb6e5"'
             buildConfigField "String", "BaseUrl", '"https://api.themoviedb.org/3/"'
-            buildConfigField "String", "imageUrl", '"https://image.tmdb.org/t/p/original/"'
+            buildConfigField "String", "imagePoster", '"https://image.tmdb.org/t/p/w500"'
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField "String", "ApiKey", '"4c921e493eb1ddd194497503171cb6e5"'
             buildConfigField "String", "BaseUrl", '"https://api.themoviedb.org/3/"'
-            buildConfigField "String", "imageUrl", '"https://image.tmdb.org/t/p/original/"'
+            buildConfigField "String", "imagePoster", '"https://image.tmdb.org/t/p/w500"'
         }
     }
     compileOptions {
@@ -58,11 +58,18 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+    implementation "androidx.test:runner:1.3.0"
+    implementation "androidx.test:rules:1.3.0"
+
     implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
     androidTestImplementation 'androidx.test:rules:1.3.0'
     testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
 
     //navigation
@@ -80,8 +87,8 @@ dependencies {
     //hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-    androidTestImplementation "com.google.dagger:hilt-android-testing:2.28-alpha"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.35"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
@@ -94,7 +101,7 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //groupie
     def groupie_version = "2.9.0"
@@ -105,8 +112,4 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     def test_version = "1.3.0"
     androidTestImplementation "androidx.test:core-ktx:$test_version"
-}
-
-kapt {
-    correctErrorTypes true
 }
