--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
 
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
     implementation "androidx.test:runner:1.3.0"
@@ -93,7 +94,7 @@ dependencies {
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
 
     //carousell
