--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id "kotlin-kapt"
+    id "kotlin-parcelize"
     id "dagger.hilt.android.plugin"
 }
 
@@ -59,14 +60,17 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     testImplementation 'org.mockito:mockito-core:3.6.0'
 
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
     implementation "androidx.test:runner:1.3.0"
     implementation "androidx.test:rules:1.3.0"
 
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
 
     androidTestImplementation 'androidx.test:rules:1.3.0'
     testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
@@ -96,6 +100,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+
 
     //carousell
     implementation 'com.github.sparrow007:carouselrecyclerview:1.2.1'
