--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,4 +118,11 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     def test_version = "1.3.0"
     androidTestImplementation "androidx.test:core-ktx:$test_version"
+
+    //room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+
+    //paging
+    implementation 'androidx.paging:paging-runtime:2.1.2'
 }
